<resources>
    <string name="app_name">Weather Forecast</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="Title">Title:</string>
    <string name="price">Price:</string>
    <string name="brand">Brand:</string>
    <string name="description">Descirption:</string>
    <string name="rating">Rating:</string>
    <string name="addToFavs">Add To Fav</string>
    <string name="Favs">Favourites</string>
    <string name="allProducts">All Products</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="today">Today</string>
    <string name="_12_pm">12 PM</string>
    <string name="weather_icon">Weather Icon</string>
    <string name="_25_c">25°C</string>
    <string name="date">Date</string>
    <string name="clear_sky">Clear Sky</string>
    <string name="max_25_c">Max 25°C</string>
    <string name="min_15_c">Min 15°C</string>
    <string name="place_name">Place Name</string>
    <string name="delete_place">Delete place</string>
    <string name="settings">Settings</string>
    <string name="location">Location</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="language">Language</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="meter_sec">Meter / Sec</string>
    <string name="mile_hour">Mile / Hour</string>
    <string name="temperature">Temperature</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="notifications">Notifications</string>
    <string name="enable">Enable</string>
    <string name="city_name">City Name</string>
    <string name="_21_c">21°C</string>
    <string name="humidity_50">Humidity: 50%</string>
    <string name="humidity_icon">Humidity icon</string>
    <string name="wind_speed_5_m_s">Wind Speed: 5 m/s</string>
    <string name="wind_speed_icon">Wind Speed icon</string>
    <string name="pressure_1013_hpa">Pressure: 1013 hPa</string>
    <string name="pressure_icon">Pressure icon</string>
    <string name="clouds_20">Clouds: 20%</string>
    <string name="clouds_icon">Clouds icon</string>
    <string name="visibility_n_a">Visibility: N/A</string>
    <string name="visibility_icon">Visibility icon</string>
    <string name="favourite_places">Favourite Places</string>
    <string name="no_places">No places</string>
    <string name="today_label">Today</string>
    <string name="tomorrow_label">Tom</string>
    <string name="network_connected">Network connected</string>
    <string name="network_disconnected">Network disconnected</string>
    <string name="network_status_changed">Network status changed</string>
    <string name="search_hint">Search for your favourite places!</string>
    <string name="no_network">"No Network"</string>
    <string name="check_snackbar">Please check your internet connection to get the latest weather updates</string>
    <string name="failed">Failed to load weather data</string>
    <string name="location_permission">Location permission is required</string>
    <string name="invalid">Invalid map location. Please set it.</string>
    <string name="unable">Unable to get location</string>
    <string name="hourly">Failed to load hourly weather</string>
    <string name="daily">Failed to load daily weather</string>
    <string name="confirm_deletion_title">Confirm Deletion</string>
    <string name="confirm_deletion_message">Are you sure you want to delete this place?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save_location_title">Save Location</string>
    <string name="save_location_message">Do you want to save %1$s to favorites?</string>
    <string name="favorite_saved_message">%1$s saved to favorites!</string>
    <string name="save_default_location_message">Do you want to set %1$s as your default location?</string>
    <string name="default_location_saved_message">%1$s saved as default location!</string>
    <string name="location_not_found">Location not found</string>
    <string name="error_fetching_suggestions">Error fetching suggestions</string>
    <string name="unknown_location">Unknown Location</string>
    <string name="cityName">City Name</string>
    <string name="weatherAlarm">Weather Alarm</string>
    <string name="dismiss">Dismiss</string>
    <string name="weatherStatus">"Weather Status "</string>
    <string name="enter_city_name">Enter city name</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="notification">Notification</string>
    <string name="alarm">Alarm</string>
    <string name="set_alert">Set Alert</string>
    <string name="cancel_alert">Cancel Alert</string>
    <string name="weather_alert_settings">Weather Alert Settings</string>
    <string name="alert_type">Alert Type</string>
    <string name="_12_00">12:00</string>
    <string name="cancel">Cancel</string>
    <string name="alerts">Alerts</string>
    <string name="weather_alert_title">Weather Alert in %1$s</string>
    <string name="weather_alert_content">Status: %1$s, Temperature: %2$s</string>
    <string name="please_select_alert_type">Please select an alert type</string>
    <string name="overlay_permission_denied">Overlay permission denied</string>
    <string name="selected_time_passed">Selected time has already passed. Please choose a future time.</string>
    <string name="end_time_after_start_time">End time must be after the start time. Please adjust the end time.</string>
    <string name="alert_canceled">Alert canceled</string>
    <string name="alert_set_for">Alert set for %1$s:%2$s</string>
    <string name="enable_notifications_in_settings">Please enable notifications in settings</string>

</resources>